--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>KellenSoft</h1>
   </header>
   <main>
-    <p>Hello, world!</p>
+    <p>Don't Mind the Bugs</p>
   </main>
   <footer>
-    <p>&copy; 2024 Kellen Sullivan</p>
+    <p>&copy; 2024 KellenSoft</p>
   </footer>
 
   <script src="script.js" defer></script>
