--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <header>
-    <h1>KellenSoft</h1>
-  </header>
-  <main>
-    <p>Don't Mind the Bugs</p>
-  </main>
-  <footer>
-    <p>&copy; 2024 KellenSoft</p>
-  </footer>
-
+  <div id="page">
+    <section class="section">
+        <div class="container">
+          <header>
+            <h1>KellenSoft</h1>
+          </header>
+          <main>
+            <p>Don't Mind the Bugs</p>
+          </main>
+          <footer>
+            <p>&copy; 2024 KellenSoft</p>
+          </footer>
+        </div>
+    </section>
+  </div>
   <script src="script.js" defer></script>
 </body>
 </html>
