--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>KellenSoft</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <link rel="stylesheet" href="bugs.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="page">
