--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <section class="section">
         <div class="container">
           <header>
-            <h1>KellenSoft</h1>
+            <h1 class="title">KellenSoft</h1>
           </header>
           <main>
-            <p>Don't Mind the Bugs</p>
+            <p class="subtitle">Don't Mind the Bugs</p>
           </main>
           <footer>
             <p>&copy; 2024 KellenSoft</p>
