--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="page">
-    <section class="section">
-        <div class="container">
-          <header>
-            <h1 class="title">KellenSoft</h1>
-          </header>
-          <main>
-            <p class="subtitle">Don't Mind the Bugs</p>
-          </main>
-          <footer>
-            <p>&copy; 2024 KellenSoft</p>
-          </footer>
-        </div>
-    </section>
+  <div id="page" class="container is-flex is-flex-direction-column min-vh-100">
+    <header class="section">
+      <h1 class="title">KellenSoft</h1>
+    </header>
+    <main class="section is-flex-grow-1">
+      <p class="subtitle">Don't Mind the Bugs</p>
+    </main>
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>&copy; 2024 KellenSoft</p>
+      </div>
+    </footer>
   </div>
   <script src="script.js" defer></script>
 </body>
