--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="page" class="container is-flex is-flex-direction-column min-vh-100">
+  <div id="page" class="is-flex is-flex-direction-column min-vh-100">
     <header class="section">
       <h1 class="title">KellenSoft</h1>
     </header>
