--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <div id="navbarMenuHeroC" class="navbar-menu">
             <div class="navbar-end">
-              <a id="cardOpener" class="navbar-item is-active"> Cards </a>
+              <a href="https://kellensoft.com/rpsjs/" class="navbar-item is-active"> RPS.js </a>
               <a href="https://github.com/kellensoft?tab=repositories" class="navbar-item"> Repositories </a>
               <span class="navbar-item">
                 <a href="" target="_blank" class="button is-danger">
